[package]
edition      = "2024"
name         = "airmon"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "airmon"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }


defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c6"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.0", features = [
  "defmt",
  "esp32c6",
  "panic-handler",
] }
esp-println = { version = "0.16.0", features = ["defmt-espflash", "esp32c6"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
